--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -45,6 +45,7 @@ body {
   text-decoration: none;
   background: #2979ff;
   padding: 15px;
+  padding-bottom: 4.5vh;
   border-radius: 5px;
   display: inline-block;
   border: none;
